deployment/minikube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: social-service
  labels:
    app: social-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: social-service
  template:
    metadata:
      labels:
        app: social-service
    spec:
      containers:
        - name: social-service
          image: social:1.0
          imagePullPolicy: Never
          resources:
            requests:
              memory: 300Mi
              cpu: "0.5"
            limits:
              memory: 500Mi
              cpu: "1.0"
          ports:
            - name: http-port
              containerPort: 9000
          readinessProbe:
            httpGet:
              path: /api/social/health
              port: 9000
            initialDelaySeconds: 60
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /api/social/health
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 15
