deployment/minikube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-service
spec:
  selector:
    app: social-service
  ports:
    - protocol: TCP
      name: http
      port: 9000
